plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.144'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude('**/*.bbmodel')
    exclude('src/generated/**/.cache')
}

// Citadel compatibility layer: compile only the animation/model API used by
// Untamed Wilds. The source is built together with the main mod so the final
// artifact remains a single mod jar and does not require a separate Citadel jar.
def citadelSourceRoot = file('.envi/Citadel-1.21/Citadel-1.21/src/main/java')
def generatedCitadelSource = layout.buildDirectory.dir('generated/sources/citadelCompat/java')
def syncCitadelCompat = tasks.register('syncCitadelCompat', Sync) {
    onlyIf {
        if (!citadelSourceRoot.exists()) {
            logger.lifecycle('Skipping local Citadel compatibility source sync; reference source is not present in .envi.')
        }
        citadelSourceRoot.exists()
    }
    from citadelSourceRoot
    into generatedCitadelSource
    // Animation contracts used by entities. AnimationHandler is supplied by
    // writeAnimationHandlerCompat below because the full Citadel message/
    // proxy graph is outside this source-only compatibility layer.
    include 'com/github/alexthe666/citadel/animation/Animation.java'
    include 'com/github/alexthe666/citadel/animation/AnimationEvent.java'
    include 'com/github/alexthe666/citadel/animation/IAnimatedEntity.java'
    include 'com/github/alexthe666/citadel/animation/IScaleable.java'

    // The complete model implementation required by Untamed Wilds. Keep
    // AdvancedEntityModel/AdvancedModelBox/ModelAnimator real; do not replace
    // the renderer with a no-op implementation.
    include 'com/github/alexthe666/citadel/client/model/AdvancedEntityModel.java'
    include 'com/github/alexthe666/citadel/client/model/AdvancedModelBox.java'
    include 'com/github/alexthe666/citadel/client/model/ModelAnimator.java'
    include 'com/github/alexthe666/citadel/client/model/basic/BasicEntityModel.java'
    include 'com/github/alexthe666/citadel/client/model/basic/BasicModelPart.java'
    include 'com/github/alexthe666/citadel/client/model/container/TextureOffset.java'
    include 'com/github/alexthe666/citadel/client/model/container/Transform.java'
    include 'com/github/alexthe666/citadel/client/model/TabulaModelRenderUtils.java'
}
def animationHandlerCompat = layout.buildDirectory.dir('generated/sources/animationHandlerCompat/java')
tasks.register('writeAnimationHandlerCompat') {
    outputs.dir(animationHandlerCompat)
    doLast {
        def file = animationHandlerCompat.get().asFile.toPath().resolve('com/github/alexthe666/citadel/animation/AnimationHandler.java').toFile()
        file.parentFile.mkdirs()
        file.text = '''package com.github.alexthe666.citadel.animation;

import net.minecraft.world.entity.Entity;

/**
 * Source-only compatibility handler. It retains Citadel's server-side
 * animation state machine while omitting only Citadel's optional network
 * message/proxy integration.
 */
public enum AnimationHandler {
    INSTANCE;

    public <T extends Entity & IAnimatedEntity> void updateAnimations(T entity) {
        Animation animation = entity.getAnimation();
        if (animation == null) {
            entity.setAnimation(IAnimatedEntity.NO_ANIMATION);
            return;
        }
        if (animation != IAnimatedEntity.NO_ANIMATION) {
            if (entity.getAnimationTick() == 0) {
                AnimationEvent.Start<T> event = new AnimationEvent.Start<>(entity, animation);
                if (net.neoforged.neoforge.common.NeoForge.EVENT_BUS.post(event).isCanceled()) {
                    return;
                }
                animation = event.getAnimation();
                entity.setAnimation(animation);
            }
            if (entity.getAnimationTick() < animation.getDuration()) {
                entity.setAnimationTick(entity.getAnimationTick() + 1);
                net.neoforged.neoforge.common.NeoForge.EVENT_BUS.post(
                    new AnimationEvent.Tick<>(entity, animation, entity.getAnimationTick()));
            }
            if (entity.getAnimationTick() >= animation.getDuration()) {
                entity.setAnimationTick(0);
                entity.setAnimation(IAnimatedEntity.NO_ANIMATION);
            }
        }
    }
}
'''
    }
}
sourceSets.main.java.srcDir animationHandlerCompat
compileJava.dependsOn tasks.named('writeAnimationHandlerCompat')
sourceSets.main.java.srcDir generatedCitadelSource
sourceSets.main.java.exclude 'untamedwilds/init/ModVillagerTrades.java'
sourceSets.main.java.exclude 'untamedwilds/package-info.java'
sourceSets.main.java.exclude 'untamedwilds/item/UntamedSpawnEggItem.java'
sourceSets.main.java.exclude 'untamedwilds/util/ModEntityRightClickEvent.java'
sourceSets.main.java.exclude 'untamedwilds/network/handler/**'

repositories {
    mavenCentral()
    maven { name = 'CurseMaven'; url = 'https://www.cursemaven.com' }
    maven { name = 'ModMaven'; url = 'https://modmaven.k-4u.nl' }
    maven { name = 'JEI'; url = 'https://dvs1.progwml6.com/files/maven/' }
    maven { name = 'Jared'; url = 'https://maven.blamejared.com/' }
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // NeoForge-compatible dependency coordinates will be restored as each library is migrated.
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    dependsOn syncCitadelCompat
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven { url = "file://${project.projectDir}/repo" }
    }
}
